fix(emoji): fix emoji reaction wrap (#1967)

--- a/kit/src/components/message/style.scss
+++ b/kit/src/components/message/style.scss
@@ -125,8 +125,6 @@
 	border: 1px solid var(--border-subtle-color);
 	border-radius: var(--border-radius-more);
 	background-color: var(--secondary-dark);
-	margin-left: 5px;
-	margin-top: 3px;
 	padding: 2px 5px;
 	cursor: pointer;
 	border: none;
